[package]
name = "lodash_rust"
version = "0.1.1"
authors = ["Charles Chiakwa"]
description = "Javascript Lodash functions in Rust"
readme = "readme.md"
homepage = "https://github.com/charleslukes/lodash-rust/"
repository = "https://github.com/charleslukes/lodash-rust/"
license = "LICENSE.txt"
keywords = ["lodash", "javascript", "functions", "rust"]


[dependencies]
regex = "1"